--- a/package.json
+++ b/package.json
@@ -42,7 +42,15 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vuejs-accessibility/label-has-for": [ 2, {
+        "components": [ "Label" ],
+        "required": {
+            "some": [ "nesting", "id" ]
+        },
+        "allowChildren": false
+    }]
+    }
   },
   "browserslist": [
     "> 1%",
